<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_box"
    android:orientation="vertical">

    <TextView
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/labelPassword"
        android:textAlignment="center"
        android:textColor="@color/darkBlue"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/constraintPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textviewCurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/labelCurrentPassword"
                android:textColor="@color/lighterBlack"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editTextCurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:ems="15"
                android:clickable="false"
                android:focusable="false"
                android:longClickable="false"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textPassword"
                android:paddingTop="15dp"
                android:hint="@string/password"
                android:text="@string/password"
                android:textColor="@color/lighterBlack"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textviewNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/labelNewPassword"
                android:textColor="@color/lighterBlack"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editTextNew"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:ems="15"
                android:hint="@string/labelTypeNewPassword"
                android:fontFamily="@font/poppins_regular"
                android:inputType="text"
                android:paddingTop="15dp"
                android:textColor="@color/darkGray"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/textviewRetype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/labelRetypePassword"
                android:textColor="@color/lighterBlack"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/editTextRetype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:ems="15"
                android:fontFamily="@font/poppins_regular"
                android:inputType="text"
                android:paddingTop="15dp"
                android:hint="@string/labelRetypeYourPassword"
                android:textColor="@color/darkGray"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonSave"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/blueGreen"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:letterSpacing="0"
                    android:padding="10dp"
                    android:text="@string/labelSave"
                    android:textAllCaps="false"
                    android:textColor="@color/light"
                    android:textSize="15sp"
                    app:cornerRadius="50dp"
                    app:rippleColor="@color/light" />

                <Button
                    android:id="@+id/buttonCancel"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/light"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:letterSpacing="0"
                    android:padding="10dp"
                    android:text="@string/labelCancel"
                    android:textAllCaps="false"
                    android:textColor="@color/blueGreen"
                    android:textSize="15sp"
                    app:cornerRadius="50dp"
                    app:rippleColor="@color/blueGreen"
                    app:strokeColor="@color/blueGreen"
                    app:strokeWidth="1dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>