<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="sanpablook.study.sanpablook.AdminMenu">

    <RelativeLayout
        android:id="@+id/relativeAdmin"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/wave_admin">

        <ImageView
            android:id="@+id/adminProfilePic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:src="@drawable/profile_icon_w_circle"/>

        <TextView
            android:id="@+id/textviewAdminName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/adminName"
            android:textSize="20sp"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/darkBlue"
            android:layout_toEndOf="@id/adminProfilePic"/>

        <TextView
            android:id="@+id/adminLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/labelAdmin"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/darkBlue"
            android:fontFamily="@font/poppins_regular"
            android:textSize="15sp"
            android:layout_below="@id/textviewAdminName"
            android:layout_toEndOf="@id/adminProfilePic"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/relativeAdmin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/buttonDashboard"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:backgroundTint="@color/lightBlue"
            android:fontFamily="@font/poppins_regular"
            android:letterSpacing="0"
            android:padding="10dp"
            android:text="@string/labelDashboard"
            android:textAllCaps="false"
            android:textAlignment="textStart"
            android:textColor="@color/darkBlue"
            android:textSize="20sp"
            app:cornerRadius="10dp"/>

        <Button
            android:id="@+id/buttonReports"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:backgroundTint="@color/lightBlue"
            android:fontFamily="@font/poppins_regular"
            android:letterSpacing="0"
            android:padding="10dp"
            android:text="@string/labelReports"
            android:textAllCaps="false"
            android:textAlignment="textStart"
            android:textColor="@color/darkBlue"
            android:textSize="20sp"
            app:cornerRadius="10dp"/>

        <Button
            android:id="@+id/buttonMessage"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:backgroundTint="@color/lightBlue"
            android:fontFamily="@font/poppins_regular"
            android:letterSpacing="0"
            android:padding="10dp"
            android:text="@string/labelMessage"
            android:textAllCaps="false"
            android:textAlignment="textStart"
            android:textColor="@color/darkBlue"
            android:textSize="20sp"
            app:cornerRadius="10dp"/>

        <Button
            android:id="@+id/buttonPayment"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:backgroundTint="@color/lightBlue"
            android:fontFamily="@font/poppins_regular"
            android:letterSpacing="0"
            android:padding="10dp"
            android:text="@string/labelPayment"
            android:textAllCaps="false"
            android:textAlignment="textStart"
            android:textColor="@color/darkBlue"
            android:textSize="20sp"
            app:cornerRadius="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/buttonSignOut"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/darkBlue"
        android:fontFamily="@font/poppins_semi_bold"
        android:letterSpacing="0"
        android:padding="10dp"
        android:text="@string/labelSignOut"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="@color/light"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>