<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_box"
    android:orientation="vertical">

    <TextView
        android:id="@+id/deleteAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:text="@string/deleteAccount"
        android:textAlignment="center"
        android:textColor="@color/darkerRed"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/linearDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/typeDeleteAccount"
                android:textColor="@color/lighterBlack"
                android:textSize="17sp"/>

            <EditText
                android:id="@+id/editTextDeleteAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:ems="15"
                android:maxLines="1"
                android:maxLength="20"
                android:fontFamily="@font/poppins_regular"
                android:inputType="textMultiLine"
                android:paddingTop="20dp"
                android:hint="@string/hintDeleteAccount"
                android:textColor="@color/lighterBlack"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonConfirm"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/darkerRed"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:letterSpacing="0"
                    android:padding="10dp"
                    android:text="@string/labelConfirm"
                    android:textAllCaps="false"
                    android:textColor="@color/light"
                    android:textSize="15sp"
                    app:cornerRadius="50dp"
                    app:rippleColor="@color/light" />

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/light"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:letterSpacing="0"
                    android:padding="10dp"
                    android:text="@string/labelCancel"
                    android:textAllCaps="false"
                    android:textColor="@color/darkerRed"
                    android:textSize="15sp"
                    app:cornerRadius="50dp"
                    app:rippleColor="@color/darkerRed"
                    app:strokeColor="@color/darkerRed"
                    app:strokeWidth="1dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>